fixing main menu logo on mobile breakpoint

--- a/awx/ui/client/src/main-menu/main-menu.block.less
+++ b/awx/ui/client/src/main-menu/main-menu.block.less
@@ -187,7 +187,7 @@
     }
 
     .MainMenu-logoImage {
-        margin-top: 15px;
+        margin: @main-menu-margin-breakpoint;
     }
 
     .MainMenu-item--notMobile {
